[B]Version 1.1.118[/B]
- justporn - fix listing
- noodlemagazine - fix thumbnails